--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,7 +2,6 @@ name: .NET Core CI/CD
 
 on:
   push:
-    branches: [ main ]
   pull_request:
     branches: [ main ]
   workflow_dispatch:
@@ -27,6 +26,7 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
 
+    test:
     - name: Test
       run: dotnet test --no-build --verbosity normal
 
