--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,6 +26,7 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
 
+  jobs:
     test:
     - name: Test
       run: dotnet test --no-build --verbosity normal
