--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,4 +32,4 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Test
-      run: dotnet test --verbosity normal
+      run: dotnet test --filter TestCategory=SmokeTest --logger:"html;LogFileName=SmokeTest_$(date +%Y%m%d%H%M%S).html"
