--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,7 +27,7 @@ jobs:
 
   Test:
     runs-on: ubuntu-latest
-
+    needs: build
     steps:
     - uses: actions/checkout@v2
 
@@ -35,10 +35,10 @@ jobs:
       run: dotnet test --filter TestCategory=SmokeTest --logger:"html;LogFileName=SmokeTest_$(date +%Y%m%d%H%M%S).html"
 
   CORETest:
-        runs-on: ubuntu-latest
-    
-        steps:
-        - uses: actions/checkout@v2
-    
-        - name: Test
-          run: dotnet test --filter TestCategory=CORE --logger:"html;LogFileName=CORE_$(date +%Y%m%d%H%M%S).html"   
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Test
+      run: dotnet test --filter TestCategory=CORE --logger:"html;LogFileName=CORE_$(date +%Y%m%d%H%M%S).html"   
