--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
 
-  Test:
+  SmokeTest:
     runs-on: ubuntu-latest
     needs: build
     steps:
