--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,41 +12,59 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 8.0.x
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 8.0.x
 
-    - name: Restore dependencies
-      run: dotnet restore
+      - name: Restore dependencies
+        run: dotnet restore
 
-    - name: Build
-      run: dotnet build --no-restore
+      - name: Build
+        run: dotnet build --no-restore
 
   SmokeTest:
     runs-on: ubuntu-latest
     needs: build
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Test
-    run: |
-      mkdir -p TestResults
-      dotnet test --filter TestCategory=SmokeTest --logger:"html;LogFileName=SmokeTest_$(date +%Y%m%d%H%M%S).html" --results-directory TestResults
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 8.0.x
 
-  - name: Upload artifact
-    uses: actions/upload-artifact@v3
-    with:
-      name: smoke-test-results
-      path: TestResults/
+      - name: Test
+        run: |
+          mkdir -p TestResults
+          dotnet test --filter TestCategory=SmokeTest --logger:"html;LogFileName=SmokeTest_$(date +%Y%m%d%H%M%S).html" --results-directory TestResults
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: smoke-test-results
+          path: TestResults/
 
   CoreTest:
     runs-on: ubuntu-latest
     needs: build
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Test
-      run: dotnet test --filter TestCategory=Core --logger:"html;LogFileName=Core_$(date +%Y%m%d%H%M%S).html"   
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 8.0.x
+
+      - name: Test
+        run: |
+          mkdir -p TestResults
+          dotnet test --filter TestCategory=Core --logger:"html;LogFileName=Core_$(date +%Y%m%d%H%M%S).html" --results-directory TestResults
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: core-test-results
+          path: TestResults/
