--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -10,7 +10,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
 
@@ -68,3 +67,26 @@ jobs:
         with:
           name: core-test-results
           path: TestResults/
+
+  download-artifacts:
+    runs-on: ubuntu-latest
+    needs: [SmokeTest, CoreTest]
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Download SmokeTest results
+        uses: actions/download-artifact@v3
+        with:
+          name: smoke-test-results
+          path: ./artifacts/smoke-test-results
+
+      - name: Download CoreTest results
+        uses: actions/download-artifact@v3
+        with:
+          name: core-test-results
+          path: ./artifacts/core-test-results
+
+      - name: List downloaded files
+        run: ls -R ./artifacts
