--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,12 +17,6 @@ jobs:
         with:
           dotnet-version: 8.0.x
 
-      - name: Install Livingdoc
-        run: dotnet tool install --global SpecFlow.Plus.LivingDoc.CLI
-
-      - name: Verify Livingdoc Installation
-        run: livingdoc --version
-
       - name: Restore dependencies
         run: dotnet restore
 
@@ -69,7 +63,7 @@ jobs:
         run: |
           mkdir -p TestResults
           dotnet test --filter TestCategory=Core
-          livingdoc test-assembly bin/Debug/net8.0/CSharpLearning.dll -t bin/debug/net8.0/TestExecution.json --output ./TestResults/TestResultsCore_$(date +%Y%m%d%H%M%S).html
+          livingdoc test-assembly bin/Debug/net8.0/CSharpLearning.dll -t bin/Debug/net8.0/TestExecution.json --output ./TestResults/TestResultsCore_$(date +%Y%m%d%H%M%S).html
           
       - name: Upload artifact
         uses: actions/upload-artifact@v3
